force-app/main/default/objects/LegalAction__c/LegalAction__c.object-meta.xml
<CustomObject>
    <description>PacPoint-IC102218 - Created for BREG phase 1</description>
    <label>Legal Action</label>
    <nameField>
        <displayFormat>LA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>