force-app/main/default/objects/LegalAction__c/fields/Amended__c.field-meta.xml
<CustomField>
    <fullName>Amended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-AC082820 - Case# 10739 - Created for DCCA BREG SEC/SEB Support Year 2 - Creating to track whether legal actions have been amended</description>
    <label>Amended</label>
    <type>Checkbox</type>
</CustomField>