force-app/main/default/objects/LegalAction__c/fields/AmendedDate__c.field-meta.xml
<CustomField>
    <fullName>AmendedDate__c</fullName>
    <description>PacPoint-AC082820 - Case# 10739 - Created for DCCA BREG SEC/SEB Support Year 2 - Creating to track whether legal actions have been amended</description>
    <label>Amended Date</label>
    <type>Date</type>
</CustomField>