force-app/main/default/objects/LegalAction__c/fields/DateIssued__c.field-meta.xml
<CustomField>
    <fullName>DateIssued__c</fullName>
    <description>PacPoint-AC011420 - Created for DCCA Travel Approval phase 1</description>
    <label>Date Issued</label>
    <type>Date</type>
</CustomField>