force-app/main/default/objects/LegalAction__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>PacPoint-AC020321 - Created for BREG Support Year 2 - Created for CMS Migration</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>