force-app/main/default/objects/LegalAction__c/fields/Legal_Action_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Legal_Action_Sub_Type__c</fullName>
    <description>PacPoint-YH-04222025</description>
    <label>Legal Action Sub-Type</label>
    <type>TextArea</type>
</CustomField>