force-app/main/default/objects/LegalAction__c/fields/LegalActionType__c.field-meta.xml
<CustomField>
    <fullName>LegalActionType__c</fullName>
    <description>PacPoint-IC102218 - Created for BREG phase 1</description>
    <label>Legal Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consent Agreement</fullName>
            </value>
            <value>
                <fullName>Consent Order</fullName>
            </value>
            <value>
                <fullName>Preliminary Order to Cease and Desist</fullName>
            </value>
            <value>
                <fullName>Final Order</fullName>
            </value>
            <value>
                <fullName>Petition for Disciplinary Action</fullName>
            </value>
            <value>
                <fullName>Special Proceedings</fullName>
            </value>
            <value>
                <fullName>DCCA Order to Show Cause</fullName>
            </value>
            <value>
                <fullName>Circuit Court Pleadings</fullName>
            </value>
            <value>
                <fullName>Supreme Court Pleadings</fullName>
            </value>
            <value>
                <fullName>Warning/Advisory Letter</fullName>
            </value>
            <value>
                <fullName>Intermediate Court of Appeal Pleadings</fullName>
            </value>
            <value>
                <fullName>Warning Letter</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Judgement</fullName>
            </value>
            <value>
                <fullName>Judgement - RBC</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>