force-app/main/default/objects/LegalAction__c/fields/SEBCaseContact__c.field-meta.xml
<CustomField>
    <fullName>SEBCaseContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-JB102618 - Created for BREG phase 1</description>
    <label>SEB Case Contact</label>
    <referenceTo>SEBCaseContact__c</referenceTo>
    <relationshipLabel>Legal Actions</relationshipLabel>
    <relationshipName>Legal_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>